feature-beginner branch v1.0.7: Add a mouse tracker and a handler to response WM_MOUSEHOVER event

--- a/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj
+++ b/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj
@@ -172,12 +172,14 @@
     <ClInclude Include="DPIScale.h" />
     <ClInclude Include="Ellipse.h" />
     <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="MouseTrackEvents.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ellipse.cpp" />
     <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="MouseTrackEvents.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
