--- a/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj.filters
+++ b/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MouseTrackEvents.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MainWindow.cpp">
@@ -45,6 +48,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Ellipse.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MouseTrackEvents.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
