--- a/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj.filters
+++ b/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="MouseTrackEvents.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ToolTip.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MainWindow.cpp">
@@ -51,6 +54,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MouseTrackEvents.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ToolTip.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
