--- a/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj
+++ b/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="BaseWindow.h" />
     <ClInclude Include="DPIScale.h" />
     <ClInclude Include="Ellipse.h" />
+    <ClInclude Include="FileDialog.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="MouseTrackEvents.h" />
     <ClInclude Include="resource.h" />
@@ -179,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ellipse.cpp" />
+    <ClCompile Include="FileDialog.cpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="MouseTrackEvents.cpp" />
     <ClCompile Include="stdafx.cpp">
