--- a/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj.filters
+++ b/src/D2DSimpleDraw/D2DSimpleDraw.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="ToolTip.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FileDialog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MainWindow.cpp">
@@ -57,6 +60,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ToolTip.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FileDialog.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
