feature-language branch v1.0.4: Add test case 02: ref-qualifier

--- a/src/Modern C++/Modern C++.vcxproj
+++ b/src/Modern C++/Modern C++.vcxproj
@@ -140,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="01. Rvalue reference.cpp" />
+    <ClCompile Include="02. ref-qualifier.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -150,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01. Rvalue reference.h" />
+    <ClInclude Include="02. ref-qualifier.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
