--- a/src/Modern C++/Modern C++.vcxproj.filters
+++ b/src/Modern C++/Modern C++.vcxproj.filters
@@ -36,12 +36,18 @@
     <ClCompile Include="01. Rvalue reference.cpp">
       <Filter>示例</Filter>
     </ClCompile>
+    <ClCompile Include="02. ref-qualifier.cpp">
+      <Filter>示例</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="01. Rvalue reference.h">
+      <Filter>示例</Filter>
+    </ClInclude>
+    <ClInclude Include="02. ref-qualifier.h">
       <Filter>示例</Filter>
     </ClInclude>
   </ItemGroup>
