feature-language branch v1.0.5: Add test case 03: Non-static data member initializers

--- a/src/Modern C++/Modern C++.vcxproj
+++ b/src/Modern C++/Modern C++.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="01. Rvalue reference.cpp" />
     <ClCompile Include="02. ref-qualifier.cpp" />
+    <ClCompile Include="03. Non-static data member initializers.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -152,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="01. Rvalue reference.h" />
     <ClInclude Include="02. ref-qualifier.h" />
+    <ClInclude Include="03. Non-static data member initializers.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
