--- a/src/Modern C++/Modern C++.vcxproj.filters
+++ b/src/Modern C++/Modern C++.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="03. Non-static data member initializers.cpp">
       <Filter>示例</Filter>
     </ClCompile>
+    <ClCompile Include="04. Variadic templates.cpp">
+      <Filter>示例</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -54,6 +57,9 @@
       <Filter>示例</Filter>
     </ClInclude>
     <ClInclude Include="03. Non-static data member initializers.h">
+      <Filter>示例</Filter>
+    </ClInclude>
+    <ClInclude Include="04. Variadic templates.h">
       <Filter>示例</Filter>
     </ClInclude>
   </ItemGroup>
