--- a/src/Modern C++/Modern C++.vcxproj.filters
+++ b/src/Modern C++/Modern C++.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="04. Variadic templates.cpp">
       <Filter>示例</Filter>
     </ClCompile>
+    <ClCompile Include="05. Initializer lists.cpp">
+      <Filter>示例</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -60,6 +63,9 @@
       <Filter>示例</Filter>
     </ClInclude>
     <ClInclude Include="04. Variadic templates.h">
+      <Filter>示例</Filter>
+    </ClInclude>
+    <ClInclude Include="05. Initializer lists.h">
       <Filter>示例</Filter>
     </ClInclude>
   </ItemGroup>
