--- a/src/Modern C++/Modern C++.vcxproj
+++ b/src/Modern C++/Modern C++.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="03. Non-static data member initializers.cpp" />
     <ClCompile Include="04. Variadic templates.cpp" />
     <ClCompile Include="05. Initializer lists.cpp" />
+    <ClCompile Include="06. static_assert.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -158,6 +159,7 @@
     <ClInclude Include="03. Non-static data member initializers.h" />
     <ClInclude Include="04. Variadic templates.h" />
     <ClInclude Include="05. Initializer lists.h" />
+    <ClInclude Include="06. static_assert.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
